fix contrast error

--- a/style.css
+++ b/style.css
@@ -747,6 +747,10 @@ h4 {
     color: #330300!important;
 }
 
+.white-ltc-white {
+    color: #FFFFFF;
+}
+
 .portfolio-thumb {
     margin-bottom: 24px;
     width: 100%;
